final grid gallery work, add alignment to quote, fix alignment atts on video
fixes #5

--- a/public/assets/less/components.less
+++ b/public/assets/less/components.less
@@ -171,6 +171,10 @@ body .aesop-entry-suck-top {
     width:100% !important;
 }
 
+// Grid Gallery
+.aesop-grid-gallery {
+}
+
 // Mobile & iOS Fixes
 .os-ios {
     .aesop-stacked-img {
